Optimize Chamber loading and refreshes
